# rad

./: .gitignore  AST.cpp  AST.h  Array.h  CMakeLists.txt  FileData.cpp  FileData.h  Grammar.txt  Interpreter.cpp  Interpreter.h  LICENSE  LLVM_libs.txt  Lexer.cpp  Lexer.h  Makefile  Parser.cpp  Parser.h  PoolAllocator.h  README.md  SrcLocation.h  TODO.txt  TextType.cpp  TextType.h  Thoughts.md  Timer.cpp  Timer.h  Token.cpp  Token.h  TokenType.h  bytecode_generator.h  bytecode_instructions.h  c2.cpp  c2.sln  c2.vcxproj  c2.vcxproj.filters  c_generator.cpp  c_generator.h  first.c2  get_llvm.sh  llvm_version.txt  (+9 more)
dyncall/: README.txt
golds/: arrays.cmptxt  cast.cmptxt  cast.runtxt  factorial.runtxt  for_test.runtxt  pointer_test.runtxt  pointers.cmptxt  run_test.cmptxt  run_test.runtxt  struct_test.runtxt  typecheck_test.runtxt
llvm_backend/: llvm_backend.cpp  llvm_backend.vcxproj  llvm_backend.vcxproj.filters
misc/: type_check.txt
modules/: Basic.cpp  Basic.def  Basic.jai  basic.jai  make_dlls.bat  start_win.c
sanity/: arrays.rad  cast.rad  factorial.rad  for_test.rad  pointer_test.rad  pointers.rad  run_test.rad  typecheck_test.rad
src/: AST.cpp  AST.h  Allocator.cpp  Allocator.h  Array.h  FileData.cpp  FileData.h  FileObject.cpp  FileObject.h  Hash.cpp  Hash.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PoolAllocator.cpp  PoolAllocator.h  Profiler.cpp  Profiler.h  SrcLocation.h  String.cpp  String.h  TextType.cpp  TextType.h  Timer.cpp  Timer.h  Token.cpp  Token.h  TokenType.h  bytecode_generator.cpp  bytecode_generator.h  bytecode_instructions.h  c2.cpp  c_generator.cpp  c_generator.h  libraryfinder.cpp  llvm_backend.cpp  llvm_backend.def  (+8 more)
test/: arrays.jai  entity.jai  factorial.jai  first.c2  for_test.jai  for_test.rad  language.rad  mini.jai  mini.rad  new.jai  open_bugs.jai  pointer_test.jai  pointers.jai  struct_test.jai  t.jai  test_assignment_errors.jai  typecheck_test.jai
tests/: empty.rad  entity.rad  first.rad  open_bugs.rad  pointer_test.rad  pointers.rad  run_test.rad  t.rad  test_assignment_errors.rad
